--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -8,7 +8,7 @@
 reStructuredText (+Sphinx),
 Python (+Django, Django REST Framework),
 Java (+JavaFX, Ant),
-JavaScript/Node.js (+Express, React, Angular, Vue, Jest, Storybooks, Styleguidist),
+JavaScript/Node.js (+Express, React, Angular, Vue, Vuex, Vue Router, Jest, Storybooks, Styleguidist),
 Kotlin (+Android),
 PHP, FORTRAN, {\fontfamily{cmr}\selectfont \LaTeX}, Bash, C++, Golang
 \textit{and, of course,} HTML and CSS (+Stylus, Sass)
