--- a/sections/about.tex
+++ b/sections/about.tex
@@ -2,22 +2,15 @@
 \name{\href{https://dhruvkb.github.io/}{Dhruv Bhanushali}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\intro
-{
+\vspace{-2mm}
 \ifdocoriented
-  Technical writer
+  \noindent{\large\spacegrotesk\textcolor{yellow}{Technical writer}}
 \else
-  Software developer
+  \noindent{\large\spacegrotesk\textcolor{yellow}{Software developer}}
 \fi
-}
-{Graduate, IIT Roorkee}
-{\href{mailto:dhruvkb@ph.iitr.ac.in}{\faEnvelope\ dhruvkb@ph.iitr.ac.in}}
-{\href{tel:+918171615670}{\faPhone\ +91 8171615670}}
 
-\social
-{
-\socialitem{https://github.com/dhruvkb}{\faGithub}{dhruvkb} \hfill
-\socialitem{https://www.linkedin.com/in/dhruvkb}{\faLinkedin}{dhruvkb} \hfill
-\socialitem{https://facebook.com/dhruv.k.bhanushali}{\faFacebook}{dhruv.k.bhanushali} \hfill
-\socialitem{https://twitter.com/dhruvkb_}{\faTwitter}{dhruvkb\_}
-}
+\intro
+{\href{mailto:dhruvkb@ph.iitr.ac.in}{\textcolor{secondary}{\fasEnvelope}~~dhruvkb@ph.iitr.ac.in}}
+{\href{tel:+918171615670}{\textcolor{secondary}{\fasPhone}~~+91 8171615670}}
+{\href{https://github.com/dhruvkb}{\textcolor{secondary}{\fabGitHub}~/~dhruvkb}}
+{\href{https://www.linkedin.com/in/dhruvkb}{\textcolor{secondary}{\fabLinkedIn}~/~dhruvkb}}
