--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,10 +1,10 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\iconsection{education}{Education}{\faGraduationCap}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{education}{Education}{blue}{\fasUniversity}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \datedsubsection{iitr}
 {\href{https://www.iitr.ac.in/}{Indian Institute of Technology Roorkee}}
-{B. Tech.}
+{Bachelor of Technology (B. Tech.)}
 {2015 -- 2019}
 {Engineering Physics}
 
