--- a/sections/opensource.tex
+++ b/sections/opensource.tex
@@ -1,8 +1,8 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\iconsection{opensource}{Open source projects}{\faLockOpen}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{opensource}{Open source}{orange}{\fasLockOpen}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\projectsubsection{creativecommons}% Keyword
+\worksubsection{creativecommons}% Keyword
 {\href{https://creativecommons.github.io/cc-vocabulary/}{Vocabulary}}% Title
 {Design system}% What?
 {May 2019 -- Present}% Time period
@@ -10,7 +10,7 @@
 
 \sectiondescription{
   Vocabulary is a cohesive design system to unite the web facing Creative 
-  Commons~\faCreativeCommons.
+  Commons~\fabCreativeCommons.
   \begin{itemize}[nosep, leftmargin=*]
     \item Developed close to 40 components for the project.
     \item Wrote the documentation and styleguide for the library.
@@ -21,7 +21,7 @@
 }
 
 
-\projectsubsection{omniportback}% Keyword
+\worksubsection{omniportback}% Keyword
 {\href{https://github.com/IMGIITRoorkee/omniport-backend/}{Omniport backend}}% Title
 {Campus portal platform}% What?
 {March 2018 -- Present}% Time period
@@ -43,7 +43,7 @@
 }
 
 \ifdocoriented
-\projectsubsection{omniportdocs}% Keyword
+\worksubsection{omniportdocs}% Keyword
 {\href{https://omniport.readthedocs.io/}{Omniport documentation}}% Title
 {Holistic documentation}% What?
 {March 2018 -- Present}% Time period
@@ -63,7 +63,7 @@
   \end{itemize}
 }
 \else
-\projectsubsection{omniportinfra}% Keyword
+\worksubsection{omniportinfra}% Keyword
 {\href{https://github.com/IMGIITRoorkee/omniport-docker/}{Omniport infrastructure}}% Title
 {Container deployment}% What?
 {March 2018 -- Present}% Time period
