--- a/sections/positions.tex
+++ b/sections/positions.tex
@@ -1,12 +1,12 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\iconsection{positions}{Positions of responsibility}{\faUserTie}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{positions}{Positions of responsibility}{cyan}{\fasUserTie}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\datedsubsection{img}  % Keyword
-{Chief technology coordinator}  % Role
-{\href{https://img.channeli.in/}{IMG}}  % Organisation
-{2016 -- 2019}  % Time period
-{\faMapMarker*~IIT Roorkee}  % Location
+\onsiteexperiencesubsection{img}% Keyword
+{Chief technology coordinator}% Role
+{\href{https://img.channeli.in/}{Information Management Group}}% Organisation
+{2016 -- 2019}% Time period
+{IIT Roorkee}% Location
 
 \sectiondescription{
   Information Management Group (IMG) is the student body that developed, manages
