--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -1,8 +1,8 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\iconsection{projects}{Other projects}{\faCubes}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{projects}{Projects}{orange}{\fasCubes}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\projectsubsection{placement}% Keyword
+\worksubsection{placement}% Keyword
 {Placement \& Internship portal}% Title
 {Omniport application}% What?
 {August -- November, 2018}% Time period
