--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,8 +1,8 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\iconsection{skills}{Skills}{\faLightbulb}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{skills}{Skills}{green}{\fasLightbulb}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\boldsubsection{langframe}{Computer languages (+frameworks)}
+\sgsubsection{langframe}{Computer languages (+frameworks)}
 \sectiondescription
 {
 reStructuredText (+Sphinx),
@@ -10,11 +10,13 @@ Python (+Django, Django REST Framework),
 Java (+JavaFX, Ant),
 JavaScript/Node.js (+Express, React, Angular, Vue, Vuex, Vue Router, Jest, Storybooks, Styleguidist),
 Kotlin (+Android),
-PHP, FORTRAN, {\fontfamily{cmr}\selectfont \LaTeX}, Bash, C++, Golang
+PHP, FORTRAN,
+{\fontfamily{lmr}\selectfont\LaTeX},
+Bash, C++, Golang
 \textit{and, of course,} HTML and CSS (+Stylus, Sass)
 }
 
-\boldsubsection{softskill}{Computer software}
+\sgsubsection{softskill}{Computer software}
 \sectiondescription
 {
 Git,
