--- a/sections/writings.tex
+++ b/sections/writings.tex
@@ -1,8 +1,8 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\iconsection{writings}{Writings}{\faPenNib}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{writings}{Writings}{orange}{\fasPenNib}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\projectsubsection{blogs}% Keyword
+\worksubsection{blogs}% Keyword
 {Blogs}% Title
 {Thoughts to words}% What?
 {Occasional, intermittent}% Time period
