--- a/sections/internships.tex
+++ b/sections/internships.tex
@@ -1,12 +1,12 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\iconsection{internships}{Internships}{\faBriefcase}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{internships}{Internships}{cyan}{\fasBriefcase}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \datedsubsection{sofintcc}% Keyword
 {Software developer}% Role
 {\href{https://creativecommons.org/}{Creative Commons}}% Organisation
 {May -- August, 2019}% Time period
-{\faGoogle~Summer of Code}% Location
+{Google Summer of Code}% Location
 
 \sectiondescription{
   \begin{itemize}[nosep, leftmargin=*]
@@ -17,11 +17,11 @@
   \end{itemize}
 }
 
-\datedsubsection{infinthe}% Keyword
+\onsiteexperiencesubsection{infinthe}% Keyword
 {Infrastructure engineer}% Role
 {\href{https://hackerearth.com/}{HackerEarth}}% Organisation
 {May -- July, 2018}% Time period
-{\faMapMarker*~Bengaluru, India}% Location
+{Bengaluru, India}% Location
 
 \sectiondescription{
   \begin{itemize}[nosep, leftmargin=*]
@@ -34,11 +34,11 @@
   \end{itemize}
 }
 
-\datedsubsection{sofinthe}% Keyword
+\onsiteexperiencesubsection{sofinthe}% Keyword
 {Software developer}% Role
 {\href{https://hackerearth.com/}{HackerEarth}}% Organisation
 {May -- July, 2017}% Time period
-{\faMapMarker*~Bengaluru, India}% Location
+{Bengaluru, India}% Location
 
 \sectiondescription{
   \begin{itemize}[nosep, leftmargin=*]
