--- a/sections/achievements.tex
+++ b/sections/achievements.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{achievements}{Achievements}{blue}{\fasMedal}
+\colouredsection{Achievements}{Achievements}{blue}{\fasMedal}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \sectiondescription{
