--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{education}{Education}{blue}{\fasUniversity}
+\colouredsection{Education}{Education}{blue}{\fasUniversity}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\datedsubsection{iitr}
+\datedsubsection{IIT Roorkee}
 {\href{https://www.iitr.ac.in/}{Indian Institute of Technology Roorkee}}
 {Bachelor of Technology (B. Tech.)}
 {2015 -- 2019}
