--- a/sections/internships.tex
+++ b/sections/internships.tex
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{internships}{Internships}{cyan}{\fasBriefcase}
+\colouredsection{Internships}{Internships}{cyan}{\fasBriefcase}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\datedsubsection{sofintcc}% Keyword
+\datedsubsection{Software @ Creative Commons}% Keyword
 {Software developer}% Role
 {\href{https://creativecommons.org/}{Creative Commons}}% Organisation
 {May -- August, 2019}% Time period
@@ -17,7 +17,7 @@
   \end{itemize}
 }
 
-\onsiteexperiencesubsection{infinthe}% Keyword
+\onsiteexperiencesubsection{Infrastructure @ HackerEarth}% Keyword
 {Infrastructure engineer}% Role
 {\href{https://hackerearth.com/}{HackerEarth}}% Organisation
 {May -- July, 2018}% Time period
@@ -34,7 +34,7 @@
   \end{itemize}
 }
 
-\onsiteexperiencesubsection{sofinthe}% Keyword
+\onsiteexperiencesubsection{Software @ HackerEarth}% Keyword
 {Software developer}% Role
 {\href{https://hackerearth.com/}{HackerEarth}}% Organisation
 {May -- July, 2017}% Time period
