--- a/sections/opensource.tex
+++ b/sections/opensource.tex
@@ -1,8 +1,8 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{opensource}{Open source}{orange}{\fasLockOpen}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{Open source}{Open source}{orange}{\fasLockOpen}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\worksubsection{creativecommons}% Keyword
+\worksubsection{Vocabulary}% Keyword
 {\href{https://creativecommons.github.io/cc-vocabulary/}{Vocabulary}}% Title
 {Design system}% What?
 {May 2019 -- Present}% Time period
@@ -21,7 +21,7 @@
 }
 
 
-\worksubsection{omniportback}% Keyword
+\worksubsection{Omniport backend}% Keyword
 {\href{https://github.com/IMGIITRoorkee/omniport-backend/}{Omniport backend}}% Title
 {Campus portal platform}% What?
 {March 2018 -- Present}% Time period
@@ -43,7 +43,7 @@
 }
 
 \ifdocoriented
-\worksubsection{omniportdocs}% Keyword
+\worksubsection{Omniport documentation}% Keyword
 {\href{https://omniport.readthedocs.io/}{Omniport documentation}}% Title
 {Holistic documentation}% What?
 {March 2018 -- Present}% Time period
@@ -63,7 +63,7 @@
   \end{itemize}
 }
 \else
-\worksubsection{omniportinfra}% Keyword
+\worksubsection{Omniport infrastructure}% Keyword
 {\href{https://github.com/IMGIITRoorkee/omniport-docker/}{Omniport infrastructure}}% Title
 {Container deployment}% What?
 {March 2018 -- Present}% Time period
