--- a/sections/positions.tex
+++ b/sections/positions.tex
@@ -1,8 +1,8 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{positions}{Positions of responsibility}{cyan}{\fasUserTie}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{Positions of responsibility}{Positions of responsibility}{cyan}{\fasUserTie}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\onsiteexperiencesubsection{img}% Keyword
+\onsiteexperiencesubsection{CTC @ IMG}% Keyword
 {Chief technology coordinator}% Role
 {\href{https://img.channeli.in/}{Information Management Group}}% Organisation
 {2016 -- 2019}% Time period
