--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{skills}{Skills}{green}{\fasLightbulb}
+\colouredsection{Skills}{Skills}{green}{\fasLightbulb}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\sgsubsection{langframe}{Computer languages (+frameworks)}
+\sgsubsection{Languages (+frameworks)}{Computer languages (+frameworks)}
 \sectiondescription
 {
 reStructuredText (+Sphinx),
@@ -16,7 +16,7 @@ Bash, C++, Golang
 \textit{and, of course,} HTML and CSS (+Stylus, Sass)
 }
 
-\sgsubsection{softskill}{Computer software}
+\sgsubsection{Software}{Computer software}
 \sectiondescription
 {
 Git,
