--- a/sections/writings.tex
+++ b/sections/writings.tex
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{writings}{Writings}{orange}{\fasPenNib}
+\colouredsection{Writings}{Writings}{orange}{\fasPenNib}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\worksubsection{blogs}% Keyword
+\worksubsection{Blogs}% Keyword
 {Blogs}% Title
 {Thoughts to words}% What?
 {Occasional, intermittent}% Time period
