--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{projects}{Projects}{orange}{\fasCubes}
+\colouredsection{Projects}{Projects}{orange}{\fasCubes}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\worksubsection{placement}% Keyword
+\worksubsection{Placement \& Internship portal}% Keyword
 {Placement \& Internship portal}% Title
 {Omniport application}% What?
 {August -- November, 2018}% Time period
