--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -8,12 +8,13 @@
 reStructuredText (+Sphinx),
 Python (+Django, Django REST Framework),
 Java (+JavaFX, Ant),
-JavaScript/Node.js (+Express, React, Angular, Vue, Vuex, Vue Router, Jest, Storybooks, Styleguidist),
+JavaScript/Node.js (+Vue, Vuex, Vue Router, Storybook, Styleguidist, Jest, React, Angular),
 Kotlin (+Android),
+CSS (+Stylus, Sass),
 PHP, FORTRAN,
-{\fontfamily{lmr}\selectfont\LaTeX},
-Bash, C++, Golang
-\textit{and, of course,} HTML and CSS (+Stylus, Sass)
+Bash, C++, Golang,
+HTML, Markdown
+\textit{and, of course,} {\fontfamily{lmr}\selectfont\LaTeX}
 }
 
 \sgsubsection{Software}{Computer software}
