Remove the language, keeping only the framework

--- a/sections/opensource.tex
+++ b/sections/opensource.tex
@@ -47,7 +47,7 @@
 {\href{https://omniport.readthedocs.io/}{Omniport documentation}}% Title
 {Holistic documentation}% What?
 {March 2018 -- Present}% Time period
-{Sphinx; reStructuredText}% Tech stack
+{Sphinx}% Tech stack
 
 \sectiondescription{
   Omniport is a platform for institutes to deploy their web portal (like 
