Add Lektor to the frameworks I know

--- a/sections/writings.tex
+++ b/sections/writings.tex
@@ -6,7 +6,7 @@
 {Blogs}% Title
 {Thoughts to words}% What?
 {Occasional, intermittent}% Time period
-{WordPress; Medium}% Tech
+{WordPress; Medium; Lektor}% Tech
 
 \sectiondescription{
   I sometimes write blog posts on various experiences from my life, both 
