--- a/sections/positions.tex
+++ b/sections/positions.tex
@@ -10,7 +10,7 @@
 
 \sectiondescription{
   Information Management Group (IMG) is the student body that developed, manages
-  and upgrades both the content management system, powering the IIT Roorkee
+  and upgrades both the content management system powering the IIT Roorkee
   website and Channel~i, the official intranet portal.
   \begin{itemize}[nosep, leftmargin=*]
     \item Pivoted IMG as a group from app to platform development.
