--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -7,7 +7,7 @@
 {
 reStructuredText (+Sphinx),
 Python (+Django, Django REST Framework),
-Java (+JavaFX, Ant),
+Java (+Swing, JavaFX, Ant, Android),
 JavaScript/Node.js (+Vue, Vuex, Vue Router, Storybook, Styleguidist, Jest, React, Angular),
 Kotlin (+Android),
 CSS (+Stylus, Sass),
