Update text for Vocabulary

--- a/sections/opensource.tex
+++ b/sections/opensource.tex
@@ -15,8 +15,9 @@
     \item Developed close to 40 components for the project.
     \item Wrote the documentation and styleguide for the library.
     \item Developed an interactive playground for the components.
-    \item Deployed all these products to GitHub Pages.
+    \item Deployed all these products to GitHub Pages and \href{https://cc-vocabulary.netlify.com}{Netlify}.
     \item Identified easy issues to encourage beginner contributors.
+    \item Published the library to \href{https://www.npmjs.com/package/@creativecommons/vocabulary}{npm}, jsDelivr and unpkg.
   \end{itemize}
 }
 
