--- a/resume.tex
+++ b/resume.tex
@@ -22,7 +22,7 @@
 % Change job portfolio type
 % Set docoriented to true to print a writing-oriented resume
 \newif\ifdocoriented
-\docorientedtrue
+\docorientedfalse
 
 \ifdocoriented
   \colorlet{background}{base3}
