--- a/sections/about.tex
+++ b/sections/about.tex
@@ -4,9 +4,9 @@
 
 \vspace{-2mm}
 \ifdocoriented
-  \noindent{\large\spacegrotesk\textcolor{yellow}{Technical writer}}
+  \noindent{\large\spacegrotesk\textcolor{cyan}{Technical writer}}
 \else
-  \noindent{\large\spacegrotesk\textcolor{yellow}{Software developer}}
+  \noindent{\large\spacegrotesk\textcolor{blue}{Software developer}}
 \fi
 
 \intro
