--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,9 +1,24 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\colouredsection{Internships}{Internships}{cyan}{\fasBriefcase}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\colouredsection{Experience}{Experience}{green}{\fasBriefcase}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\onsiteexperiencesubsection{Software @ FamPay}% Keyword
+{Software engineer}% Role
+{\href{https://fampay.in/}{FamPay}}% Organisation
+{November -- December, 2019}% Time period
+{Bengaluru, India}% Location
+
+\sectiondescription{
+  \begin{itemize}[nosep, leftmargin=*]
+    \item Wrote the core transaction API of the platform.
+    \item Integrated with the Cashfree payment gateway.
+    \item Developed transaction SMS notification system.
+    \item Developed the support engine of the platform.
+  \end{itemize}
+}
 
 \datedsubsection{Software @ Creative Commons}% Keyword
-{Software developer}% Role
+{Software engineer}% Role
 {\href{https://creativecommons.org/}{Creative Commons}}% Organisation
 {April -- September, 2019}% Time period
 {Google Summer of Code}% Location
@@ -35,7 +50,7 @@
 }
 
 \onsiteexperiencesubsection{Software @ HackerEarth}% Keyword
-{Software developer}% Role
+{Software engineer}% Role
 {\href{https://hackerearth.com/}{HackerEarth}}% Organisation
 {May -- July, 2017}% Time period
 {Bengaluru, India}% Location
@@ -48,5 +63,28 @@
     \item Developed the scaffolding architecture using RabbitMQ.
     \item Added provider-agnostic database connectivity using JDBC.
     \item Installed security policies such as memory and I/O limits.
+  \end{itemize}
+}
+
+\onsiteexperiencesubsection{CTC @ IMG}% Keyword
+{Chief technology coordinator}% Role
+{\href{https://img.channeli.in/}{Information Management Group}}% Organisation
+{2016 -- 2019}% Time period
+{IIT Roorkee}% Location
+
+\sectiondescription{
+  Information Management Group (IMG) is the student body that developed, manages
+  and upgrades both the content management system powering the IIT Roorkee
+  website and Channel~i, the official intranet portal.
+  \begin{itemize}[nosep, leftmargin=*]
+    \item Pivoted IMG as a group from app to platform development.
+    \item Replaced Channel~i, and its suite of apps, with Omniport.
+    \item Piloted a complete upgrade of the stack and technology.
+    \item Mentored a team of over 50 developers and designers.
+    \item Halved timelines by replacing the development paradigm.
+    \item Containerised and isolated the development process.
+    \item Fostered OSS culture with a record 30 repos open-sourced.
+    \item Lead IMG to 10 and 13 GSoC selections in 2018 and 2019.
+    \item Reinvigorated IMG's popular image on social media.
   \end{itemize}
 }
