--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -8,7 +8,7 @@
 reStructuredText (+Sphinx),
 Python (+Django, Django REST Framework),
 Java (+Swing, JavaFX, Ant, Android),
-JavaScript/Node.js (+Vue, Vuex, Vue Router, Storybook, Styleguidist, Jest, React, Angular),
+JavaScript/Node.js (+Storybook, Styleguidist, Jest, Vue, Vuex, Vue Router, React, Angular),
 Kotlin (+Android),
 CSS (+Stylus, Sass),
 PHP, FORTRAN,
