Add Ruby to known languages

--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -11,9 +11,9 @@ Java (+Swing, JavaFX, Ant, Android),
 JavaScript/Node.js (+Storybook, Styleguidist, Jest, Vue, Vuex, Vue Router, React, Angular),
 Kotlin (+Android),
 CSS (+Stylus, Sass),
-PHP, FORTRAN,
-Bash, C++, Golang,
-HTML, Markdown
+Ruby, Golang,
+Bash, C++, FORTRAN,
+PHP, HTML, Markdown
 \textit{and, of course,} {\fontfamily{lmr}\selectfont\LaTeX}
 }
 
