Add Rails to skills

--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -11,7 +11,7 @@ Java (+Swing, JavaFX, Ant, Android),
 JavaScript/Node.js (+Storybook, Styleguidist, Jest, Vue, Vuex, Vue Router, React, Angular),
 Kotlin (+Android),
 CSS (+Stylus, Sass),
-Ruby, Golang,
+Ruby (+Rails), Golang,
 Bash, C++, FORTRAN,
 PHP, HTML, Markdown
 \textit{and, of course,} {\fontfamily{lmr}\selectfont\LaTeX}
